--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,8 +1,8 @@
-name: testing, format and lint checking
+name: format and lint checking
 
 on: 
   push:
-    branches: [ main ]
+    branches: [ i190652-github-actions ]
 
 jobs:
 
